Fix: space between articles and footer too small

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -64,6 +64,7 @@ body > header > nav {
 article {
   margin: 0;
   width: 100%;
+  margin-bottom: 2em;
 }
 
 article header {
